--- a/index.html
+++ b/index.html
@@ -14,8 +14,93 @@
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
 
-  <body>
-    <h1>Tailwind Cards Challenge</h1><br>
-    <p>Check the README for instructions.</p>
+  <body >
+    <div class="bg-gray-100 h-screen">
+      <div class="container mx-auto py-6">
+        <div class="flex flex-wrap">
+          <div class="w-full md:w-1/2 lg:w-1/3 lg:mb-0 mb-12 px-3">
+            <div
+              class="flex flex-col rounded-lg border bg-white border-1 border-gray-300 shadow-sm hover:shadow-lg"
+            >
+              <img
+                src="https://picsum.photos/500/300?v=1"
+                class="w-full rounded-t-lg aspect-[5/3]"
+              />
+              <div class="flex-auto p-6">
+                <p class="mb-4">
+                  The aim of this challenge is to put into practice how to use
+                  Tailwind to create a responsive UI. Before adding custom
+                  styles, check the docs to see if those styles can be achieved
+                  using a Tailwind class.
+                </p>
+                <div class="flex justify-between items-center">
+                  <small class="text-gray-600">8 mins</small>
+                  <button
+                    type="button"
+                    class="rounded-lg py-1 px-2 text-sm bg-red-500 hover:bg-red-600 active:bg-red-700 focus:outline-none focus:ring focus:ring-red-300 text-white"
+                  >
+                    Read more
+                  </button>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="w-full md:w-1/2 lg:w-1/3 lg:mb-0 mb-12 px-3">
+            <div
+              class="flex flex-col rounded-lg border bg-white border-1 border-gray-300 shadow-sm hover:shadow-lg"
+            >
+              <img
+                src="https://picsum.photos/500/300?v=2"
+                class="w-full rounded-t-lg aspect-[5/3]"
+              />
+              <div class="flex-auto p-6">
+                <p class="mb-4">
+                  The aim of this challenge is to put into practice how to use
+                  Tailwind to create a responsive UI. Before adding custom
+                  styles, check the docs to see if those styles can be achieved
+                  using a Tailwind class.
+                </p>
+                <div class="flex justify-between items-center">
+                  <small class="text-gray-600">8 mins</small>
+                  <button
+                    type="button"
+                    class="rounded-lg py-1 px-2 text-sm bg-red-500 hover:bg-red-600 active:bg-red-700 focus:outline-none focus:ring focus:ring-red-300 text-white"
+                  >
+                    Read more
+                  </button>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="w-full md:w-1/2 lg:w-1/3 lg:mb-0 mb-12 px-3">
+            <div
+              class="flex flex-col rounded-lg border bg-white border-1 border-gray-300 shadow-sm hover:shadow-lg"
+            >
+              <img
+                src="https://picsum.photos/500/300?v=3"
+                class="w-full rounded-t-lg aspect-[5/3]"
+              />
+              <div class="flex-auto p-6">
+                <p class="mb-4">
+                  The aim of this challenge is to put into practice how to use
+                  Tailwind to create a responsive UI. Before adding custom
+                  styles, check the docs to see if those styles can be achieved
+                  using a Tailwind class.
+                </p>
+                <div class="flex justify-between items-center">
+                  <small class="text-gray-600">8 mins</small>
+                  <button
+                    type="button"
+                    class="rounded-lg py-1 px-2 text-sm bg-red-500 hover:bg-red-600 active:bg-red-700 focus:outline-none focus:ring focus:ring-red-300 text-white"
+                  >
+                    Read more
+                  </button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
